--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tancredo Bet</title>
+    <title>Tancredo Bet - Cassino Online</title>
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
     <header>
         <h1>Tancredo Bet</h1>
-        <p>Criado por Kaua Camargo Ribeiro. Direitos reservados à escola.</p>
+        <p>Criado por Kaua Camargo Ribeiro. Todos os direitos reservados à escola.</p>
     </header>
     <main>
         <section id="roulette">
