--- a/index.html
+++ b/index.html
@@ -10,6 +10,16 @@
     <header>
         <h1>Tancredo Bet</h1>
         <p>Criado por Kaua Camargo Ribeiro. Todos os direitos reservados à escola.</p>
+        <nav>
+            <a href="#roulette">Roleta</a>
+            <a href="#blackjack">Blackjack</a>
+            <a href="#dice">Dados</a>
+            <a href="#slots">Slots</a>
+            <a href="#tigrinho">Tigrinho</a>
+            <a href="#poker">Poker</a>
+            <a href="#baccarat">Baccarat</a>
+            <!-- Adicione mais links para outros jogos -->
+        </nav>
     </header>
     <main>
         <section id="roulette">
@@ -32,6 +42,22 @@
             <button id="spinSlotsButton">Girar Slots</button>
             <p id="slotsResult">Clique em 'Girar Slots' para jogar.</p>
         </section>
+        <section id="tigrinho">
+            <h2>Tigrinho</h2>
+            <button id="playTigrinhoButton">Jogar Tigrinho</button>
+            <p id="tigrinhoResult">Clique em 'Jogar Tigrinho' para jogar.</p>
+        </section>
+        <section id="poker">
+            <h2>Poker</h2>
+            <button id="playPokerButton">Jogar Poker</button>
+            <p id="pokerResult">Clique em 'Jogar Poker' para jogar.</p>
+        </section>
+        <section id="baccarat">
+            <h2>Baccarat</h2>
+            <button id="playBaccaratButton">Jogar Baccarat</button>
+            <p id="baccaratResult">Clique em 'Jogar Baccarat' para jogar.</p>
+        </section>
+        <!-- Adicione mais seções para outros jogos -->
     </main>
     <script src="js/scripts.js"></script>
 </body>
