--- a/index.html
+++ b/index.html
@@ -63,3 +63,12 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"></script>
 </body>
 </html>
+<button id="startRoulette" class="btn btn-danger">Iniciar Roleta 3D</button>
+<button id="rollDice3D" class="btn btn-warning">Rolar Dados 3D</button>
+<div id="slots" class="slots-container">
+    <div class="slot">🍒</div>
+    <div class="slot">🍋</div>
+    <div class="slot">🍊</div>
+</div>
+<button id="spinSlots" class="btn btn-success">Girar Slot</button>
+<p id="slotsResult"></p>
