--- a/public/index.htm
+++ b/public/index.htm
@@ -6,6 +6,7 @@
     <title>Tancredo Bet - Projeto Escolar</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
     <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
     <script src="script.js" defer></script>
 </head>
@@ -44,13 +45,21 @@
         <div class="row">
             <div class="col-md-6">
                 <h2>Jogo da Roleta</h2>
-                <button class="btn btn-success" onclick="playGame()">Jogar</button>
-                <p id="result" class="mt-3"></p>
+                <button id="startRoulette" class="btn btn-danger">Iniciar Roleta 3D</button>
             </div>
             <div class="col-md-6">
                 <h2>Jogo de Dados</h2>
-                <button class="btn btn-primary" onclick="rollDice()">Rolar Dados</button>
-                <p id="diceResult" class="mt-3"></p>
+                <button id="rollDice3D" class="btn btn-warning">Rolar Dados 3D</button>
+            </div>
+            <div class="col-md-6">
+                <h2>Jogo de Slot Machines</h2>
+                <div id="slots" class="slots-container">
+                    <div class="slot">🍒</div>
+                    <div class="slot">🍋</div>
+                    <div class="slot">🍊</div>
+                </div>
+                <button id="spinSlots" class="btn btn-success">Girar Slot</button>
+                <p id="slotsResult"></p>
             </div>
         </div>
     </main>
@@ -63,12 +72,3 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"></script>
 </body>
 </html>
-<button id="startRoulette" class="btn btn-danger">Iniciar Roleta 3D</button>
-<button id="rollDice3D" class="btn btn-warning">Rolar Dados 3D</button>
-<div id="slots" class="slots-container">
-    <div class="slot">🍒</div>
-    <div class="slot">🍋</div>
-    <div class="slot">🍊</div>
-</div>
-<button id="spinSlots" class="btn btn-success">Girar Slot</button>
-<p id="slotsResult"></p>
