--- a/public/index.htm
+++ b/public/index.htm
@@ -43,15 +43,17 @@
 
     <main class="container my-5">
         <div class="row">
-            <div class="col-md-6">
-                <h2>Jogo da Roleta</h2>
+            <div class="col-md-6 mb-4">
+                <h2>Jogo da Roleta 3D</h2>
                 <button id="startRoulette" class="btn btn-danger">Iniciar Roleta 3D</button>
+                <div id="rouletteContainer" class="mt-3"></div>
             </div>
-            <div class="col-md-6">
-                <h2>Jogo de Dados</h2>
+            <div class="col-md-6 mb-4">
+                <h2>Jogo de Dados 3D</h2>
                 <button id="rollDice3D" class="btn btn-warning">Rolar Dados 3D</button>
+                <div id="diceContainer" class="mt-3"></div>
             </div>
-            <div class="col-md-6">
+            <div class="col-md-6 mb-4">
                 <h2>Jogo de Slot Machines</h2>
                 <div id="slots" class="slots-container">
                     <div class="slot">🍒</div>
