--- a/public/index.htm
+++ b/public/index.htm
@@ -6,8 +6,6 @@
     <title>Tancredo Bet - Projeto Escolar</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
-    <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
     <script src="script.js" defer></script>
 </head>
 <body>
@@ -43,17 +41,17 @@
 
     <main class="container my-5">
         <div class="row">
-            <div class="col-md-6 mb-4">
-                <h2>Jogo da Roleta 3D</h2>
-                <button id="startRoulette" class="btn btn-danger">Iniciar Roleta 3D</button>
-                <div id="rouletteContainer" class="mt-3"></div>
+            <div class="col-md-4 mb-4">
+                <h2>Jogo da Roleta</h2>
+                <button id="startRoulette" class="btn btn-danger">Iniciar Roleta</button>
+                <div id="roulette" class="game-display"></div>
             </div>
-            <div class="col-md-6 mb-4">
-                <h2>Jogo de Dados 3D</h2>
-                <button id="rollDice3D" class="btn btn-warning">Rolar Dados 3D</button>
-                <div id="diceContainer" class="mt-3"></div>
+            <div class="col-md-4 mb-4">
+                <h2>Jogo de Dados</h2>
+                <button id="rollDice" class="btn btn-warning">Rolar Dados</button>
+                <div id="dice" class="game-display"></div>
             </div>
-            <div class="col-md-6 mb-4">
+            <div class="col-md-4 mb-4">
                 <h2>Jogo de Slot Machines</h2>
                 <div id="slots" class="slots-container">
                     <div class="slot">🍒</div>
