--- a/index.html
+++ b/index.html
@@ -3,47 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>🎰 Tancredo Bet 🎲</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Tancredo Bet - Projeto Escolar</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <h1>🎉 Tancredo Bet 🤑</h1>
-        <p>Projeto escolar criado por Kauã Camargo Ribeiro</p>
+        <h1>⚽ Tancredo Bet 🏆</h1>
+        <p>📝 Projeto escolar por Kauã Camargo Ribeiro</p>
     </header>
-    
+
     <main>
-        <section id="home">
-            <h2>Bem-vindo ao Tancredo Bet! 🤩</h2>
-            <p>O melhor site de apostas, feito para a escola. 🎓</p>
-            <div class="games-grid">
-                <a href="games/game1.html" class="game-card">🃏 Jogo de Cartas</a>
-                <a href="games/game2.html" class="game-card">🎲 Roleta</a>
-                <a href="games/game3.html" class="game-card">🎯 Dardos</a>
-                <a href="games/game4.html" class="game-card">🎰 Caça-Níqueis</a>
-                <a href="games/game5.html" class="game-card">🏆 Quiz</a>
-                <!-- Repita a linha abaixo para adicionar mais jogos -->
-                <a href="games/game6.html" class="game-card">🎲 Jogo 6</a>
-                <a href="games/game7.html" class="game-card">🎲 Jogo 7</a>
-                <a href="games/game8.html" class="game-card">🎲 Jogo 8</a>
-                <a href="games/game9.html" class="game-card">🎲 Jogo 9</a>
-                <a href="games/game10.html" class="game-card">🎲 Jogo 10</a>
-                <a href="games/game11.html" class="game-card">🎲 Jogo 11</a>
-                <a href="games/game12.html" class="game-card">🎲 Jogo 12</a>
-                <a href="games/game13.html" class="game-card">🎲 Jogo 13</a>
-                <a href="games/game14.html" class="game-card">🎲 Jogo 14</a>
-                <a href="games/game15.html" class="game-card">🎲 Jogo 15</a>
-                <a href="games/game16.html" class="game-card">🎲 Jogo 16</a>
-                <a href="games/game17.html" class="game-card">🎲 Jogo 17</a>
-                <a href="games/game18.html" class="game-card">🎲 Jogo 18</a>
-                <a href="games/game19.html" class="game-card">🎲 Jogo 19</a>
-                <a href="games/game20.html" class="game-card">🎲 Jogo 20</a>
+        <section class="betting">
+            <h2>Faça sua aposta! 🎯</h2>
+            <div class="match">
+                <p>🏟️ <strong>Brasil 🇧🇷</strong> vs <strong>Argentina 🇦🇷</strong></p>
+                <label for="bet-brasil">Brasil: </label>
+                <input type="number" id="bet-brasil" placeholder="0">
+                <label for="bet-argentina">Argentina: </label>
+                <input type="number" id="bet-argentina" placeholder="0">
+                <button onclick="placeBet()">💸 Apostar</button>
             </div>
+            <div id="bet-result"></div>
         </section>
     </main>
-    
+
     <footer>
-        <p>&copy; 2024 Tancredo Bet. Todos os direitos reservados. 😎</p>
+        <p>© 2024 Tancredo Bet - Todos os direitos reservados a Kauã Camargo Ribeiro</p>
     </footer>
+
+    <script src="script.js"></script>
 </body>
 </html>
